# AemeathCode

./: .gitignore  pyproject.toml
src/aemeathcode/agent/: loop.py  prompts.py
src/aemeathcode/agent/events/: bus.py  models.py  printer.py  writer.py
src/aemeathcode/agent/llm/: base.py  provider.py  types.py
src/aemeathcode/agent/tools/: __init__.py  base.py  invocation.py  registry.py
src/aemeathcode/agent/tools/builtin/: list_dir_tool.py  read_file_tool.py
src/aemeathcode/bus/: envelope.py
src/aemeathcode/cli/: client.py  main.py  render.py  stream_renderer.py
src/aemeathcode/core/: app.py  config.py  context.py  logging_setup.py  runner.py
src/aemeathcode/transport/: context.py  ipc_broadcaster.py  socket_client.py  socket_server.py
src/aemeathcode/tui/: app.py  render.py  stream_renderer.py  theme.py  widgets.py
tests/: client.py
